# Riko

./: .gitignore  Cargo.toml  NOTICE.md  README.md
crates/riko-core/: Cargo.toml
crates/riko-core/plugins/fps-unlocker/: plugin.toml
crates/riko-core/plugins/fsr-upscale/: plugin.toml
crates/riko-core/plugins/low-spec-mode/: plugin.toml
crates/riko-core/plugins/mangohud/: plugin.toml
crates/riko-core/plugins/ping-logger/: ping-logger.sh  plugin.toml
crates/riko-core/plugins/replay-buffer/: plugin.toml  replay.sh
crates/riko-core/plugins/vkbasalt/: plugin.toml  vkBasalt.conf
crates/riko-core/plugins/vortex-optim/: plugin.toml
crates/riko-core/src/: auth.rs  config.rs  crypto.rs  doctor.rs  error.rs  friends.rs  games.rs  lib.rs  logger.rs  marketplace.rs  net.rs  overlay.rs  playtime.rs  presence.rs  progress.rs  self_update.rs  setup.rs  shader_cache.rs  shortcuts.rs  telemetry.rs  updater.rs  uri.rs  wine_versions.rs
crates/riko-core/src/launcher/: mod.rs  process.rs
crates/riko-core/src/platform/linux/: dll.rs  doctor.rs  dxvk.rs  mod.rs  setup.rs  vkd3d.rs
crates/riko-core/src/platform/macos/: mod.rs
crates/riko-core/src/plugin/: build.rs  builtin.rs  manifest.rs  mod.rs
frontend/: index.html  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: auth.rs  doctor.rs  friends.rs  games.rs  launch.rs  marketplace.rs  mod.rs  playtime.rs  plugins.rs  settings.rs  setup.rs  update.rs  wine.rs
(+42 files in other folders)
