[package]
name = "riko-launcher"
version = "0.1.0"
edition = "2024"
description = "GUI launcher for Vortex"
license = "MIT OR Apache-2.0"

[lib]
name = "riko_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
riko-core = { path = "../crates/riko-core" }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
