[package]
name = "riko-core"
version = "0.1.0"
edition = "2024"
description = "Core library for Riko Launcher"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
which = "7"
tracing = "0.1"
url = "2"
thiserror = "2"
futures-util = "0.3"
serde_json = "1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
zip = "2"
tar = "0.4"
flate2 = "1"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[lints.clippy]
all = "deny"
